--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,11 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <h1>Welcome to Web Dev</h1>
+      <a href="http://localhost:3000/labs/a1/index.html">Lab 1</a>
+      <a href="http://localhost:3000/Kanbas/Courses/Home/screen.html">A1</a>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
