--- a/public/Kanbas/Courses/Settings/Details/index.html
+++ b/public/Kanbas/Courses/Settings/Details/index.html
@@ -7,10 +7,85 @@
         <a href="/Kanbas/Courses/Settings/Apps/index.html"><button>Apps</button></a>
         <a href="/Kanbas/Courses/Settings/Feature/index.html"><button>Feature Options</button></a>
         <a href="/Kanbas/Courses/Settings/Integrations/index.html"><button>Integrations</button></a>
-        <h3>Course Details</h3>
-        <h2>Name: CS5610 Web Development SEC 02</h2>
-        <h2>Course Code: CS5610.23424.221343</h2>
-        <h2>CBlueprint Course: No</h2>
-        <h2>Course Template</h2>
+        <h2>Course Details</h2>
+        <label>Image  </label><button>Choose Image</button>
+        <h5>Name: CS5610 Web Development SEC 02</h5>
+        <h5>Course Code: CS5610.23424.221343</h5>
+        <h5>CBlueprint Course: No</h5>
+        <h5>Course Template</h5>
+        <input type="checkbox">Enable course as course template</input>
+        <lable>TimeZone  </lable><input type="text" value="Eastern Time (US & Canada)"/>
+        <h5>SIS ID: CS5610.23424.221343</h5>
+        <h5>Subaccount: CS Grad</h5>
+        <label>Term  </label><input type="text" value="Spring 2024"/>
+        <br />
+        <br />
+        <label>Particpation  </label><input type="text" value="Term"/>
+        <br />
+        <br />
+        <label>Start</label><br />
+        <input type="date" value="2024-01-01"/>
+        <br />
+        <br />
+        <label>End</label><br />
+        <input type="date" value="2024-01-01"/>
+        <br />
+        <br />
+        <input type="checkbox">Restrict students from viewing course before term start date</input>
+        <br />
+        <br />
+        <input type="checkbox">Restrict students from viewing course after term start date</input>
+        <br />
+        <br />
+        <label>Default due time: </label>
+        <select>
+            <option value="12:00 AM">12:00 AM</option>
+        </select>
+        <br />
+        <br />
+        <label>Language</label>
+        <select>
+            <option value="English">English</option>
+        </select>
+        <h5>File Storage: 1000 Megabytes</h5>
+        <label>Large Course: </label>
+        <input type="checkbox">Launch SpeedGrader Filtered by Student Group</input>
+        <br />
+        <br />
+        <label>Grading Scheme: </label>
+        <input type="checkbox">Enable course grading scheme</input>
+        <br />
+        <br />
+        <label>License: </label>
+        <select>
+            <option>Private (Copyrighted)</option>
+        </select>
+        <br />
+        <br />
+        <label>File Copyright: </label>
+        <input type="checkbox">Copyright and license information must be provided for files before they are published</input>
+        <br />
+        <br />
+        <label>Visability: </label>
+        <p>if you need to make your course public, please contact your administrator/support</p>
+        <select>
+            <option>Course</option>
+        </select>
+        <input type="checkbox">Include this course in the public course index</input>
+        <br />
+        <br />
+        <label>Format: </label>
+        <select>
+            <option>On Campus</option>
+        </select>
+        <br />
+        <br />
+        <label>Mastery Paths: </label>
+        <input type="checkbox">Enable individual learning paths for students based on assesment</input>
+        <br />
+        <br />
+        <label>Description</label>
+        <textarea></textarea>
+        <a href="/Kanbas/Courses/Settings/Details/screen.html"><button>Update Course Details</button></a>
     </body>
 </html>
