--- a/public/Kanbas/Courses/Assignments/screen.html
+++ b/public/Kanbas/Courses/Assignments/screen.html
@@ -1,147 +1,137 @@
 <html>
-    <head></head>
-    <body>
-        <table>
-            <tbody>
-                <tr>
-                    <td valign="top">
-                        <ul>
-                            <li><a href="/Kanbas/Account/screen.html">Account</a></li>
-                            <li><a href="/Kanbas/Dashboard/index.html">Dashboard</a></li>
-                            <li><a href="/Kanbas/Courses/Home/screen.html">Courses</a></li>
-                            <li><a href="/Kanbas/Calendar/index.html">Calendar</a></li>
-                            <li><a href="/Kanbas/Inbox/index.html">Inbox</a></li>
-                            <li><a href="/Kanbas/History/index.html">History</a></li>
-                            <li><a href="/Kanbas/Studio/index.html">Studio</a></li>
-                            <li><a href="/Kanbas/Commons/index.html">Commons</a></li>
-                            <li><a href="/Kanbas/Help/index.html">Help</a></li>
-                        </ul>
-                    </td>
-                    <td valign="top">
-                        <ul>
-                            <li><a href="/Kanbas/Courses/Home/screen.html">Home</a></li>
-                            <li><a href="/Kanbas/Courses/Modules/index.html">Modules</a></li>
-                            <li><a href="/Kanbas/Courses/Home/screen.html">Piazza</a></li>
-                            <li><a href="/Kanbas/Courses/Zoom/index.html">Zoom Meetings</a></li>
-                            <li><a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a></li>
-                            <li><a href="/Kanbas/Courses/Quizzes/index.html">Quizzes</a></li>
-                            <li><a href="/Kanbas/Courses/Grades/screen.html">Grades</a></li>
-                            <li><a href="/Kanbas/Courses/People/index.html">People</a></li>
-                            <li><a href="/Kanbas/Courses/Panopto/index.html">Panopto Video</a></li>
-                            <li><a href="/Kanbas/Courses/Discussions/index.html">Discussions</a></li>
-                            <li><a href="/Kanbas/Courses/Announcements/index.html">Announcements</a></li>
-                            <li><a href="/Kanbas/Courses/Pages/index.html">Pages</a></li>
-                            <li><a href="/Kanbas/Courses/Files/index.html">Files</a></li>
-                            <li><a href="/Kanbas/Courses/Rubrics/index.html">Rubrics</a></li>
-                            <li><a href="/Kanbas/Courses/Outcomes/index.html">Outcomes</a></li>
-                            <li><a href="/Kanbas/Courses/Collaborations/index.html">Collaborations</a></li>
-                            <li><a href="/Kanbas/Courses/Syllabus/index.html">Syllabus</a></li>
-                            <li><a href="/Kanbas/Courses/Settings/Details/screen.html">Settings</a></li>
-                        </ul>
-                    </td>
-                    <td>
-                        <table width="100%">
-                            <tbody>
-                                <tr>
-                                    <td>
-                                        <input placeholder="Search for Assignments"/>
-                                        <button>+ Group</button>
-                                        <button>+ Assignment</button>
-                                        <select>
-                                            <option>Edit Assignment Dates</option>
-                                            <option>Assignment Group Weights</option>
-                                            <option>Gradescope 1.3</option>
-                                        </select>
-                                    </td>
-                                    <td></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <h3>Assignments
-                            <select>
-                                <option>Edit</option>
-                                <option>Speed Grader</option>
-                                <option>Duplicate</option>
-                                <option>Delete</option>
-                                <option>Move To...</option>
-                                <option>Send To...</option>
-                                <option>Copy To...</option>
-                                <option>Share to Commons</option>
-                            </select>
-                        </h3>
-                            <ul>
-                                <li>
-                                    <a href="/Kanbas/Courses/Assignments/Editor/screen.html">A1</a> | Not available Yet<br />
-                                    <a href="./modules.html">Multiple Modules</a><br />
-                                    | Due date: 11:59pm on Monday, September 9, 2019 | 100pts
-                                </li>
-                                <li>
-                                    <a href="/Kanbas/Courses/Assignments/Editor/screen.html">A2</a> | Not available Yet<br />
-                                    <a href="./modules.html">Multiple Modules</a><br />
-                                    | Due date: 11:59pm on Monday, September 9, 2019 | 100pts
-                                </li>
-                                <li>
-                                    <a href="/Kanbas/Courses/Assignments/Editor/screen.html">A3</a> | Not available Yet<br />
-                                    <a href="./modules.html">Multiple Modules</a><br />
-                                    | Due date: 11:59pm on Monday, September 9, 2019 | 100pts
-                                </li>
-                                <li>
-                                    <a href="/Kanbas/Courses/Assignments/Editor/screen.html">A4</a> | Not available Yet<br />
-                                    <a href="./modules.html">Multiple Modules</a><br />
-                                    | Due date: 11:59pm on Monday, September 9, 2019 | 100pts
-                                </li>
-                            </ul>
-                        <h3>Quizzes
-                            <select>
-                                <option>Edit</option>
-                                <option>Speed Grader</option>
-                                <option>Duplicate</option>
-                                <option>Delete</option>
-                                <option>Move To...</option>
-                                <option>Send To...</option>
-                                <option>Copy To...</option>
-                                <option>Share to Commons</option>
-                            </select>
-                        </h3>
-                            <ul>
-                                <li><a href="/Kanbas/Courses/Quizzes/index.html">Q1</a> | Not available Yet</li>
-                                <li><a href="/Kanbas/Courses/Quizzes/index.html">Q2</a> | Not available Yet</li>
-                                <li><a href="/Kanbas/Courses/Quizzes/index.html">Q3</a> | Not available Yet</li>
-                                <li><a href="/Kanbas/Courses/Quizzes/index.html">Q4</a> | Not available Yet</li>
-                            </ul>
-                        <h3>Exams
-                            <select>
-                                <option>Edit</option>
-                                <option>Speed Grader</option>
-                                <option>Duplicate</option>
-                                <option>Delete</option>
-                                <option>Move To...</option>
-                                <option>Send To...</option>
-                                <option>Copy To...</option>
-                                <option>Share to Commons</option>
-                            </select>
-                        </h3>
-                            <ul>
-                                <li><a href="/Kanbas/Courses/Quizzes/index.html">E1</a> | Not available Yet</li>
-                                <li><a href="/Kanbas/Courses/Quizzes/index.html">E2</a> | Not available Yet</li>
-                            </ul>
-                        <h3>Project
-                            <select>
-                                <option>Edit</option>
-                                <option>Speed Grader</option>
-                                <option>Duplicate</option>
-                                <option>Delete</option>
-                                <option>Move To...</option>
-                                <option>Send To...</option>
-                                <option>Copy To...</option>
-                                <option>Share to Commons</option>
-                            </select>
-                        </h3>
-                            <ul>
-                                <li><a href="/Kanbas/Courses/Quizzes/index.html">P1</a> | Not available Yet</li>
-                            </ul>
-                    </td>
-                </tr>
-            </tbody>
-    </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Page Title</title>
+  <link rel="stylesheet" href="/libs/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="/libs/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/Kanbas/styles.css">
+  <link rel="stylesheet" href="/Kanbas/Navigation/index.css">
+  <link rel="stylesheet" href="/Kanbas/Courses/Navigation/index.css">
+  <link rel="stylesheet" href="/Kanbas/Courses/Home/index.css">
+  <link rel="stylesheet" href="/Kanbas/Courses/Modules/index.css">
+</head>
+<body>
+  <!-- Implement links to Kanbas and Course Navigation -->
+  <div class="d-flex">
+    <div class="d-none d-md-block">
+      <ul class="wd-kanbas-navigation">
+        <li><a href="http://northeastern.edu">N</a></li>
+        <li><a href="/Kanbas/Account/screen.html"><i class="fa fa-user account-icon"></i>Account</a></li>
+        <li><a href="/Kanbas/Dashboard/screen.html"><i class="fa fa-tachometer"></i>Dashboard</a></li>
+        <li class="wd-active"><a href="/Kanbas/Courses/Home/screen.html"><i class="fa fa-book"></i>Courses</a></li>
+        <li><a href="#"><i class="fa fa-users"></i>Groups</a></li>
+        <li><a href="#"><i class="fa fa-calendar"></i>Calendar</a></li>
+        <li><a href="#"><i class="fa fa-envelope"></i><br/>Inbox</a></li>
+        <li><a href="#"><i class="fa fa-history"></i>History</a></li>
+        <li><a href="#"><i class="fa fa-tv"></i>Studio</a></li>
+        <li><a href="#"><i class="fa fa-question"></i><br/>Help</a></li>
+      </ul>
+    </div>
+    <div class="d-none d-md-block">
+      <ul class="wd-navigation">
+        <li><a href="/Kanbas/Courses/Home/screen.html">Home</a></li>
+        <li><a href="/Kanbas/Courses/Modules/screen.html">Modules</a></li>
+        <li><a href="http://piazza.com">Piazza</a></li>
+        <li><a href="#">Zoom</a></li>
+        <li class="wd-active"><a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a></li>
+        <li><a href="#">Quizzes</a></li>
+        <li><a href="/Kanbas/Courses/Grades/screen.html">Grades</a></li>
+        <li><a href="#">People</a></li>
+      </ul>
+    </div>
+    <div class="flex-fill">
+      <div class="container">
+        <br>
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="#">CS1234 ></a></li>
+              <li class="breadcrumb-item active" aria-current="page">Assignments</li>
+            </ol>
+          </nav>
+        <div class="row justify-content-between mt-3">
+          <div class="col-auto">
+            <input type="text" class="form-control" placeholder="Search for Assignment">
+          </div>
+          <div class="col-auto">
+            <div class="row">
+              <div class="col-auto">
+                <button class="btn btn-light me-3">+ Group</button>
+              </div>
+              <div class="col-auto me-3">
+                <button class="btn btn-danger">- Assignment</button>
+              </div>
+              <div class="col-auto">
+                <a href="/Kanbas/Courses/Assignments/Editor/screen.html"><button class="btn btn-light">Edit</button></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br>
+      <ul class="list-group wd-modules">
+        <li class="list-group-item">
+          <div>
+            <i class="fa fa-ellipsis-v"></i> Assignments
+            <span class="float-end">
+              <i class="fa fa-check-circle text-success"></i>
+              <i class="fa fa-plus ms-2"></i>
+              <i class="fa fa-ellipsis-v ms-2"></i>
+            </span>
+          </div>
+          <ul class="list-group">
+            <li class="list-group-item">
+              <i class="fa fa-ellipsis-v"></i> A1 SETUP
+              <span class="float-end">
+                <i class="fa fa-check-circle text-success"></i>
+                <i class="fa fa-ellipsis-v ms-2"></i>
+              </span>
+              <h6 class="text-muted">Due 9/18/2022</h6>
+            </li>
+            <li class="list-group-item">
+              <i class="fa fa-ellipsis-v"></i> A2 HTML
+              <span class="float-end">
+                <i class="fa fa-check-circle text-success"></i>
+                <i class="fa fa-ellipsis-v ms-2"></i>
+              </span>
+              <h6 class="text-muted">Due 9/25/2022</h6>
+            </li>
+            <li class="list-group-item">
+              <i class="fa fa-ellipsis-v"></i> A3 CSS
+              <span class="float-end">
+                <i class="fa fa-check-circle text-success"></i>
+                <i class="fa fa-ellipsis-v ms-2"></i>
+              </span>
+              <h6 class="text-muted">Due 10/2/2022</h6>
+            </li>
+            <li class="list-group-item">
+              <i class="fa fa-ellipsis-v"></i> A4 BOOTSTRAP
+              <span class="float-end">
+                <i class="fa fa-check-circle text-success"></i>
+                <i class="fa fa-ellipsis-v ms-2"></i>
+              </span>
+              <h6 class="text-muted">Due 10/10/2022</h6>
+            </li>
+            <li class="list-group-item">
+                <i class="fa fa-ellipsis-v"></i> A5 JAVASCRIPT
+                <span class="float-end">
+                  <i class="fa fa-check-circle text-success"></i>
+                  <i class="fa fa-ellipsis-v ms-2"></i>
+                </span>
+                <h6 class="text-muted">Due 10/16/2022</h6>
+              </li>
+              <li class="list-group-item">
+                <i class="fa fa-ellipsis-v"></i> A6 REACT
+                <span class="float-end">
+                  <i class="fa fa-check-circle text-success"></i>
+                  <i class="fa fa-ellipsis-v ms-2"></i>
+                </span>
+                <h6 class="text-muted">Due 10/23/2022</h6>
+              </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</body>
 </html>
