--- a/public/Kanbas/Courses/Grades/index.html
+++ b/public/Kanbas/Courses/Grades/index.html
@@ -1,123 +1,112 @@
 <html>
-    <head></head>
-    <body>
-        <table width="100%">
-            <tbody>
-                <tr>
-                    <td>
-                        <select>
-                            <option>Gradebook</option>
-                            <option>Change Gradebook View</option>
-                            <option>Traditional Gradebook</option>
-                            <option>Individual Gradebook</option>
-                        </select>
-                    </td>
-                    <td>
-                        <button>Shortcuts</button>
-                        <button>Import</button>
-                        <select>
-                            <option>Export</option>
-                            <option>Export Current Gradebook View</option>
-                            <option>Export Entire Gradebook</option>
-                        </select>
-                        <button>Settings</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <h4>Student Names</h4>
-                        <input/><br />
-                        <select>
-                            <option>Spongebob</option>
-                            <option>Squidward</option>
-                            <option>Mr Krabs</option>
-                            <option>Gary</option><br />
-                        </select>
-                    </td>
-                    <td>
-                        <h4>Assignment Names</h4>
-                        <input/><br />
-                        <select>
-                            <option>A1</option>
-                            <option>Q1</option>
-                            <option>A2</option>
-                            <option>Q2</option><br />
-                        </select>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-        <button>Apply Filters</button>
-        <table border="1">
-            <thead>
-                <tr>
-                    <th>Student Name</th>
-                    <th>A1</th>
-                    <th>A2</th>
-                    <th>A3</th>
-                    <th>A4</th>
-                    <th>A5</th>
-                    <th>A6</th>
-                    <th>Q1</th>
-                    <th>Q2</th>
-                    <th>Q3</th>
-                    <th>Q4</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Spongebob</td>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                </tr>
-                <tr>
-                    <td>Squidward</td>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                </tr>
-                <tr>
-                    <td>Mr Krabs</td>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                </tr>
-                <tr>
-                    <td>Gary</td>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                    <th><input value="100" /></th>
-                </tr>
-            </tbody>
-        </table>
-    </body>
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/libs/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/Kanbas/styles.css">
+</head>
+<body>
+    <div class="container">
+        <div class="row justify-content-end">
+            <div class="col-md-auto">
+                <button class="btn btn-light">Import<i class="fa fa-download"></i></button>
+                <button class="btn btn-light">Export<i class="fa fa-upload"></i></button>
+                <button class="btn btn-light"><i class="fa fa-gear"></i></button>
+            </div>
+        </div>
+        <div class="flex-container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="input-group">
+                        <div class="student-name-input">
+                            <h4>Student Names</h4>
+                            <input class="form-control" type="text">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="input-group">
+                        <div class="assignment-name-input">
+                            <h4>Assignment Names</h4>
+                            <input class="form-control" type="text">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="btn btn-light apply-filters-btn"><i class="fa fa-filter"></i>Apply Filters</button>
+        </div>
+        <div class="table-responsive">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>Student Name</th>
+                        <th>A1</th>
+                        <th>A2</th>
+                        <th>A3</th>
+                        <th>A4</th>
+                        <th>A5</th>
+                        <th>A6</th>
+                        <th>Q1</th>
+                        <th>Q2</th>
+                        <th>Q3</th>
+                        <th>Q4</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Spongebob</td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                    </tr>
+                    <tr>
+                        <td>Squidward</td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                    </tr>
+                    <tr>
+                        <td>Sandy</td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                    </tr>
+                    <tr>
+                        <td>Gary</td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                        <td><input class="form-control" type="text" value="100"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</body>
 </html>
