--- a/public/Kanbas/Courses/Assignments/Editor/screen.html
+++ b/public/Kanbas/Courses/Assignments/Editor/screen.html
@@ -1,107 +1,109 @@
 <html>
-    <head></head>
-    <body>
-        <table>
-            <tbody>
-                <tr>
-                    <td valign="top">
-                        <ul>
-                            <li><a href="/Kanbas/Account/Navigation/index.html">Account</a></li>
-                            <li><a href="/Kanbas/Dashboard/index.html">Dashboard</a></li>
-                            <li><a href="/Kanbas/Courses/Home/screen.html">Courses</a></li>
-                            <li><a href="/Kanbas/Calendar/index.html">Calendar</a></li>
-                            <li><a href="/Kanbas/Inbox/index.html">Inbox</a></li>
-                            <li><a href="/Kanbas/History/index.html">History</a></li>
-                            <li><a href="/Kanbas/Studio/index.html">Studio</a></li>
-                            <li><a href="/Kanbas/Commons/index.html">Commons</a></li>
-                            <li><a href="/Kanbas/Help/index.html">Help</a></li>
-                        </ul>
-                    </td>
-                    <td valign="top">
-                        <ul>
-                            <li><a href="/Kanbas/Courses/Home/screen.html">Home</a></li>
-                            <li><a href="/Kanbas/Courses/Modules/index.html">Modules</a></li>
-                            <li><a href="/Kanbas/Courses/Home/screen.html">Piazza</a></li>
-                            <li><a href="/Kanbas/Courses/Zoom/index.html">Zoom Meetings</a></li>
-                            <li><a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a></li>
-                            <li><a href="/Kanbas/Courses/Quizzes/index.html">Quizzes</a></li>
-                            <li><a href="/Kanbas/Courses/Grades/screen.html">Grades</a></li>
-                            <li><a href="/Kanbas/Courses/People/index.html">People</a></li>
-                            <li><a href="/Kanbas/Courses/Panopto/index.html">Panopto Video</a></li>
-                            <li><a href="/Kanbas/Courses/Discussions/index.html">Discussions</a></li>
-                            <li><a href="/Kanbas/Courses/Announcements/index.html">Announcements</a></li>
-                            <li><a href="/Kanbas/Courses/Pages/index.html">Pages</a></li>
-                            <li><a href="/Kanbas/Courses/Files/index.html">Files</a></li>
-                            <li><a href="/Kanbas/Courses/Rubrics/index.html">Rubrics</a></li>
-                            <li><a href="/Kanbas/Courses/Outcomes/index.html">Outcomes</a></li>
-                            <li><a href="/Kanbas/Courses/Collaborations/index.html">Collaborations</a></li>
-                            <li><a href="/Kanbas/Courses/Syllabus/index.html">Syllabus</a></li>
-                            <li><a href="/Kanbas/Courses/Settings/Details/screen.html">Settings</a></li>
-                        </ul>
-                    </td>
-                    <td>
-                        <select>
-                            <option>Speed Grader</option>
-                        </select>
-                        <hr />
-                        <h2>Assignment Name</h2>
-                        <input value="A1 - HTML" />
-                        <br />
-                        <br />
-                        <textarea>Assignment Description. In this assignment we are learning HTML.</textarea>
-                        <br />
-                        <br />
-                        <label for="points">Points</label><br />
-                        <input id="points" value="100" />
-                        <br />
-                        <br />
-                        <label>Assignment Group</label><br />
-                        <select>
-                            <option>ASSIGNMENT</option>
-                            <option>QUIZ</option>
-                            <option>EXAM</option>
-                            <option>PROJECT</option>
-                        </select>
-                        <br />
-                        <br />
-                        <label>Display Grade As</label><br />
-                        <select>
-                            <option>Percentage</option>
-                        </select>
-                        <br />
-                        <br />
-                        <label>Submission Type</label><br />
-                        <select>
-                            <option>Online</option>
-                        </select>
-                        <br />
-                        <br />
-                        <label>Online Entry Options</label><br />
-                        <label><input type="checkbox" name="online-entry-options" />Text Entry</label><br />
-                        <label><input type="checkbox" name="online-entry-options" />Website URL</label><br />
-                        <label><input type="checkbox" name="online-entry-options" />Media Recordings</label><br />
-                        <label><input type="checkbox" name="online-entry-options" />Student Annotations</label><br />
-                        <br />
-                        <br />
-                        <label>Assign to</label><br />
-                        <select>
-                            <option>Everyone</option>
-                        </select>
-                        <br />
-                        <br />
-                        <label>Due Date</label><br />
-                        <input type="date" /><br />
-                        <br />
-                        <label>Available From</label><br />
-                        <input type="date" /><br />
-                        <br /> 
-                        <label>Until</label><br />
-                        <input type="date" /><br />
-                        <br /> 
-                        <a href="/Kanbas/Courses/Assignments/screen.html"><button>Cancel</button></a>
-                        <a href="/Kanbas/Courses/Assignments/screen.html"><button>Save</button></a>
-                    </td>
-                </tr>
-            </tbody>
-    </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Page Title</title>
+  <link rel="stylesheet" href="/libs/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="/libs/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/Kanbas/styles.css">
+  <link rel="stylesheet" href="/Kanbas/Navigation/index.css">
+  <link rel="stylesheet" href="/Kanbas/Courses/Navigation/index.css">
+  <link rel="stylesheet" href="/Kanbas/Courses/Home/index.css">
+  <link rel="stylesheet" href="/Kanbas/Courses/Modules/index.css">
+</head>
+<body>
+  <!-- Implement links to Kanbas and Course Navigation -->
+  <div class="d-flex">
+    <div class="d-none d-md-block">
+      <ul class="wd-kanbas-navigation">
+        <li><a href="http://northeastern.edu">N</a></li>
+        <li><a href="/Kanbas/Account/screen.html"><i class="fa fa-user account-icon"></i>Account</a></li>
+        <li><a href="/Kanbas/Dashboard/screen.html"><i class="fa fa-tachometer"></i>Dashboard</a></li>
+        <li class="wd-active"><a href="/Kanbas/Courses/Home/screen.html"><i class="fa fa-book"></i>Courses</a></li>
+        <li><a href="#"><i class="fa fa-users"></i>Groups</a></li>
+        <li><a href="#"><i class="fa fa-calendar"></i>Calendar</a></li>
+        <li><a href="#"><i class="fa fa-envelope"></i><br/>Inbox</a></li>
+        <li><a href="#"><i class="fa fa-history"></i>History</a></li>
+        <li><a href="#"><i class="fa fa-tv"></i>Studio</a></li>
+        <li><a href="#"><i class="fa fa-question"></i><br/>Help</a></li>
+      </ul>
+    </div>
+    <div class="d-none d-md-block">
+      <ul class="wd-navigation">
+        <li><a href="/Kanbas/Courses/Home/screen.html">Home</a></li>
+        <li><a href="/Kanbas/Courses/Modules/screen.html">Modules</a></li>
+        <li><a href="http://piazza.com">Piazza</a></li>
+        <li><a href="#">Zoom</a></li>
+        <li class="wd-active"><a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a></li>
+        <li><a href="#">Quizzes</a></li>
+        <li><a href="/Kanbas/Courses/Grades/screen.html">Grades</a></li>
+        <li><a href="#">People</a></li>
+      </ul>
+    </div>
+    <div class="flex-fill">
+      <div class="container">
+        <br>
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="#">CS1234 ></a></li>
+              <li class="breadcrumb-item"><a href="#">Assignments ></a></li>
+              <li class="breadcrumb-item active" aria-current="page">A1</li>
+            </ol>
+        </nav>
+        <select class="form-control">
+            <option>Speed Grader</option>
+        </select>
+        <hr />
+        <h2>Assignment Name</h2>
+        <input class="form-control" class="form-control" value="A1 - HTML" />
+        <br />
+        <br />
+        <textarea class="form-control">Assignment Description. In this assignment we are learning HTML.</textarea>
+        <br />
+        <br />
+        <label for="points">Points</label><br />
+        <input class="form-control" class="form-control" id="points" value="100" />
+        <br />
+        <br />
+        <label>Assignment Group</label><br />
+        <select class="form-control">
+            <option>ASSIGNMENT</option>
+            <option>QUIZ</option>
+            <option>EXAM</option>
+            <option>PROJECT</option>
+        </select>
+        <br />
+        <br />
+        <label>Display Grade As</label><br />
+        <select class="form-control">
+            <option>Percentage</option>
+        </select>
+        <br />
+        <br />
+        <label>Submission Type</label><br />
+        <select class="form-control">
+            <option>Online</option>
+        </select>
+        <br />
+        <br />
+        <label>Assign to</label><br />
+        <select class="form-control">
+            <option>Everyone</option>
+        </select>
+        <br />
+        <br />
+        <label>Due Date</label><br />
+        <input class="form-control" type="date" /><br />
+        <br />
+        <label>Available From</label><br />
+        <input class="form-control" type="date" /><br />
+        <br /> 
+        <label>Until</label><br />
+        <input class="form-control" type="date" /><br />
+        <br /> 
+        <a href="/Kanbas/Courses/Assignments/screen.html"><button class="btn btn-danger">Cancel</button></a>
+        <a href="/Kanbas/Courses/Assignments/screen.html"><button class="btn btn-success">Save</button></a>
+    </div>
+  </div>
+</body>
 </html>
