--- a/public/Kanbas/Courses/Grades/screen.html
+++ b/public/Kanbas/Courses/Grades/screen.html
@@ -1,165 +1,156 @@
 <html>
-    <head></head>
-    <body>
-        <table>
-            <tbody>
-                <tr>
-                    <td valign="top">
-                        <ul>
-                            <li><a href="/Kanbas/Account/screen.html">Account</a></li>
-                            <li><a href="/Kanbas/Dashboard/index.html">Dashboard</a></li>
-                            <li><a href="/Kanbas/Courses/Home/screen.html">Courses</a></li>
-                            <li><a href="/Kanbas/Calendar/index.html">Calendar</a></li>
-                            <li><a href="/Kanbas/Inbox/index.html">Inbox</a></li>
-                            <li><a href="/Kanbas/History/index.html">History</a></li>
-                            <li><a href="/Kanbas/Studio/index.html">Studio</a></li>
-                            <li><a href="/Kanbas/Commons/index.html">Commons</a></li>
-                            <li><a href="/Kanbas/Help/index.html">Help</a></li>
-                        </ul>
-                    </td>
-                    <td valign="top">
-                        <ul>
-                            <li><a href="/Kanbas/Courses/Home/screen.html">Home</a></li>
-                            <li><a href="/Kanbas/Courses/Modules/index.html">Modules</a></li>
-                            <li><a href="/Kanbas/Courses/Home/screen.html">Piazza</a></li>
-                            <li><a href="/Kanbas/Courses/Zoom/index.html">Zoom Meetings</a></li>
-                            <li><a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a></li>
-                            <li><a href="/Kanbas/Courses/Quizzes/index.html">Quizzes</a></li>
-                            <li><a href="/Kanbas/Courses/Grades/screen.html">Grades</a></li>
-                            <li><a href="/Kanbas/Courses/People/index.html">People</a></li>
-                            <li><a href="/Kanbas/Courses/Panopto/index.html">Panopto Video</a></li>
-                            <li><a href="/Kanbas/Courses/Discussions/index.html">Discussions</a></li>
-                            <li><a href="/Kanbas/Courses/Announcements/index.html">Announcements</a></li>
-                            <li><a href="/Kanbas/Courses/Pages/index.html">Pages</a></li>
-                            <li><a href="/Kanbas/Courses/Files/index.html">Files</a></li>
-                            <li><a href="/Kanbas/Courses/Rubrics/index.html">Rubrics</a></li>
-                            <li><a href="/Kanbas/Courses/Outcomes/index.html">Outcomes</a></li>
-                            <li><a href="/Kanbas/Courses/Collaborations/index.html">Collaborations</a></li>
-                            <li><a href="/Kanbas/Courses/Syllabus/index.html">Syllabus</a></li>
-                            <li><a href="/Kanbas/Courses/Settings/Details/screen.html">Settings</a></li>
-                        </ul>
-                    </td>
-                    <td valign="top">        
-                        <table width="100%">
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <select>
-                                        <option>Gradebook</option>
-                                        <option>Change Gradebook View</option>
-                                        <option>Traditional Gradebook</option>
-                                        <option>Individual Gradebook</option>
-                                    </select>
-                                </td>
-                                <td>
-                                    <button>Shortcuts</button>
-                                    <button>Import</button>
-                                    <select>
-                                        <option>Export</option>
-                                        <option>Export Current Gradebook View</option>
-                                        <option>Export Entire Gradebook</option>
-                                    </select>
-                                    <button>Settings</button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <h4>Student Names</h4>
-                                    <input/><br />
-                                    <select>
-                                        <option>Spongebob</option>
-                                        <option>Squidward</option>
-                                        <option>Mr Krabs</option>
-                                        <option>Gary</option><br />
-                                    </select>
-                                </td>
-                                <td>
-                                    <h4>Assignment Names</h4>
-                                    <input/><br />
-                                    <select>
-                                        <option>A1</option>
-                                        <option>Q1</option>
-                                        <option>A2</option>
-                                        <option>Q2</option><br />
-                                    </select>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <button>Apply Filters</button>
-                    <table border="1">
-                        <thead>
-                            <tr>
-                                <th>Student Name</th>
-                                <th>A1</th>
-                                <th>A2</th>
-                                <th>A3</th>
-                                <th>A4</th>
-                                <th>A5</th>
-                                <th>A6</th>
-                                <th>Q1</th>
-                                <th>Q2</th>
-                                <th>Q3</th>
-                                <th>Q4</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Spongebob</td>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                            </tr>
-                            <tr>
-                                <td>Squidward</td>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                            </tr>
-                            <tr>
-                                <td>Mr Krabs</td>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                            </tr>
-                            <tr>
-                                <td>Gary</td>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                                <th><input value="100" /></th>
-                            </tr>
-                        </tbody>
-                    </table>
-                    </td>
-                </tr>
-            </tbody>
-    </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Page Title</title>
+  <link rel="stylesheet" href="/libs/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="/libs/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/Kanbas/styles.css">
+  <link rel="stylesheet" href="/Kanbas/Navigation/index.css">
+  <link rel="stylesheet" href="/Kanbas/Courses/Navigation/index.css">
+  <link rel="stylesheet" href="/Kanbas/Courses/Home/index.css">
+  <link rel="stylesheet" href="/Kanbas/Courses/Modules/index.css">
+</head>
+<body>
+  <!-- Implement links to Kanbas and Course Navigation -->
+  <div class="d-flex">
+    <div class="d-none d-md-block">
+      <ul class="wd-kanbas-navigation">
+        <li><a href="http://northeastern.edu">N</a></li>
+        <li><a href="/Kanbas/Account/screen.html"><i class="fa fa-user account-icon"></i>Account</a></li>
+        <li><a href="/Kanbas/Dashboard/screen.html"><i class="fa fa-tachometer"></i>Dashboard</a></li>
+        <li class="wd-active"><a href="/Kanbas/Courses/Home/screen.html"><i class="fa fa-book"></i>Courses</a></li>
+        <li><a href="#"><i class="fa fa-users"></i>Groups</a></li>
+        <li><a href="#"><i class="fa fa-calendar"></i>Calendar</a></li>
+        <li><a href="#"><i class="fa fa-envelope"></i><br/>Inbox</a></li>
+        <li><a href="#"><i class="fa fa-history"></i>History</a></li>
+        <li><a href="#"><i class="fa fa-tv"></i>Studio</a></li>
+        <li><a href="#"><i class="fa fa-question"></i><br/>Help</a></li>
+      </ul>
+    </div>
+    <div class="d-none d-md-block">
+      <ul class="wd-navigation">
+        <li><a href="/Kanbas/Courses/Home/screen.html">Home</a></li>
+        <li><a href="/Kanbas/Courses/Modules/screen.html">Modules</a></li>
+        <li><a href="http://piazza.com">Piazza</a></li>
+        <li><a href="#">Zoom</a></li>
+        <li><a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a></li>
+        <li><a href="#">Quizzes</a></li>
+        <li class="wd-active"><a href="/Kanbas/Courses/Grades/screen.html">Grades</a></li>
+        <li><a href="#">People</a></li>
+      </ul>
+    </div>
+    <div class="flex-fill">
+        <div class="container">
+            <br/>
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item active" aria-current="page">> Grades</li>
+                </ol>
+              </nav>
+            <div class="row justify-content-end">
+                <div class="col-md-auto">
+                    <button class="btn btn-light">Import<i class="fa fa-download"></i></button>
+                    <button class="btn btn-light">Export<i class="fa fa-upload"></i></button>
+                    <button class="btn btn-light"><i class="fa fa-gear"></i></button>
+                </div>
+            </div>
+            <div class="flex-container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="input-group">
+                            <div class="student-name-input">
+                                <h4>Student Names</h4>
+                                <input class="form-control" type="text">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="input-group">
+                            <div class="assignment-name-input">
+                                <h4>Assignment Names</h4>
+                                <input class="form-control" type="text">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="btn btn-light apply-filters-btn"><i class="fa fa-filter"></i>Apply Filters</button>
+            </div>
+            <div class="table-responsive">
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th>Student Name</th>
+                            <th>A1</th>
+                            <th>A2</th>
+                            <th>A3</th>
+                            <th>A4</th>
+                            <th>A5</th>
+                            <th>A6</th>
+                            <th>Q1</th>
+                            <th>Q2</th>
+                            <th>Q3</th>
+                            <th>Q4</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Spongebob</td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                        </tr>
+                        <tr>
+                            <td>Squidward</td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                        </tr>
+                        <tr>
+                            <td>Sandy</td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                        </tr>
+                        <tr>
+                            <td>Gary</td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                            <td><input class="form-control" type="text" value="100"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+  </div>
+</body>
 </html>
