--- a/public/Kanbas/Courses/Modules/index.html
+++ b/public/Kanbas/Courses/Modules/index.html
@@ -1,27 +1,192 @@
 <html>
-    <head></head>
-    <body>
-      <button>Collapse All</button>
-      <button>View Progress</button>
-      <select>
-        <option>Publish All</option>
-        <option>Unpublish All</option>
-      </select>
-      <button>+ Module</button>
-      <hr />
-      <ul>
-          <li> Week 1
-            <ul>
-              <li>Learning Objectives
-              <li>Introduction to the course</li>
-              <li>Learn what is Web Development</li>
-            </ul>
-          </li>
-          <li> Week 2
-            <ul>
-              <li>Learning Objectives</li>
-            </ul>
-          </li>
-        </ul>
-    </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Course Modules</title>
+  <link rel="stylesheet" href="/libs/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="/libs/font-awesome/css/font-awesome.css">
+  <link rel="stylesheet" href="/Kanbas/Courses/Modules/index.css">
+</head>
+<body>
+  <div class="container">
+    <br/>
+    <div class="row justify-content-end mt-3">
+      <div class="col-auto">
+        <button class="btn btn-light">Collapse All</button>
+      </div>
+      <div class="col-auto">
+        <button class="btn btn-light">View Progress</button>
+      </div>
+      <div class="col-auto">
+        <button class="btn btn-light">Publish All</button>
+      </div>
+      <div class="col-auto">
+        <button class="btn btn-danger">Module +</button>
+      </div>
+    </div>
+  </div>
+  <br/>
+  <ul class="list-group wd-modules">
+    <li class="list-group-item">
+      <div>
+        <i class="fa fa-ellipsis-v"></i> Week 1
+        <span class="float-end">
+          <i class="fa fa-check-circle text-success"></i>
+          <i class="fa fa-plus ms-2"></i>
+          <i class="fa fa-ellipsis-v ms-2"></i>
+        </span>
+      </div>
+      <ul class="list-group">
+        <li class="list-group-item">
+          <i class="fa fa-ellipsis-v"></i> Learning Objectives
+          <span class="float-end">
+            <i class="fa fa-check-circle text-success"></i>
+            <i class="fa fa-ellipsis-v ms-2"></i>
+          </span>
+        </li>
+        <li class="list-group-item">
+          <i class="fa fa-ellipsis-v"></i> Syllabus
+          <span class="float-end">
+            <i class="fa fa-check-circle text-success"></i>
+            <i class="fa fa-ellipsis-v ms-2"></i>
+          </span>
+        </li>
+        <li class="list-group-item">
+          <i class="fa fa-ellipsis-v"></i> Calendar
+          <span class="float-end">
+            <i class="fa fa-check-circle text-success"></i>
+            <i class="fa fa-ellipsis-v ms-2"></i>
+          </span>
+        </li>
+        <li class="list-group-item">
+          <i class="fa fa-ellipsis-v"></i> Project
+          <span class="float-end">
+            <i class="fa fa-check-circle text-success"></i>
+            <i class="fa fa-ellipsis-v ms-2"></i>
+          </span>
+        </li>
+      </ul>
+    </li>
+    <li class="list-group-item">
+      <div>
+        <i class="fa fa-ellipsis-v"></i> Week 2
+        <span class="float-end">
+          <i class="fa fa-check-circle text-success"></i>
+          <i class="fa fa-plus ms-2"></i>
+          <i class="fa fa-ellipsis-v ms-2"></i>
+        </span>
+      </div>
+      <ul class="list-group">
+        <li class="list-group-item">
+          <i class="fa fa-ellipsis-v"></i> Creating User Interfaces
+          <span class="float-end">
+            <i class="fa fa-check-circle text-success"></i>
+            <i class="fa fa-ellipsis-v ms-2"></i>
+          </span>
+        </li>
+        <li class="list-group-item">
+          <i class="fa fa-ellipsis-v"></i> HTML and the DOM
+          <span class="float-end">
+            <i class="fa fa-check-circle text-success"></i>
+            <i class="fa fa-ellipsis-v ms-2"></i>
+          </span>
+        </li>
+        <li class="list-group-item">
+          <i class="fa fa-ellipsis-v"></i> Tables
+          <span class="float-end">
+            <i class="fa fa-check-circle text-success"></i>
+            <i class="fa fa-ellipsis-v ms-2"></i>
+          </span>
+        </li>
+        <li class="list-group-item">
+          <i class="fa fa-ellipsis-v"></i> Vector Graphics
+          <span class="float-end">
+            <i class="fa fa-check-circle text-success"></i>
+            <i class="fa fa-ellipsis-v ms-2"></i>
+          </span>
+        </li>
+      </ul>
+    </li>
+    <li class="list-group-item">
+      <div>
+        <i class="fa fa-ellipsis-v"></i> Week 3
+        <span class="float-end">
+          <i class="fa fa-check-circle text-success"></i>
+          <i class="fa fa-plus ms-2"></i>
+          <i class="fa fa-ellipsis-v ms-2"></i>
+        </span>
+      </div>
+      <ul class="list-group">
+        <li class="list-group-item">
+          <i class="fa fa-ellipsis-v"></i> Intro to CSS
+          <span class="float-end">
+            <i class="fa fa-check-circle text-success"></i>
+            <i class="fa fa-ellipsis-v ms-2"></i>
+          </span>
+        </li>
+        <li class="list-group-item">
+          <i class="fa fa-ellipsis-v"></i> Tag IDs and Classes
+          <span class="float-end">
+            <i class="fa fa-check-circle text-success"></i>
+            <i class="fa fa-ellipsis-v ms-2"></i>
+          </span>
+        </li>
+        <li class="list-group-item">
+          <i class="fa fa-ellipsis-v"></i> Styling Text and Backgrounds
+          <span class="float-end">
+            <i class="fa fa-check-circle text-success"></i>
+            <i class="fa fa-ellipsis-v ms-2"></i>
+          </span>
+        </li>
+        <li class="list-group-item">
+          <i class="fa fa-ellipsis-v"></i> The Box Model
+          <span class="float-end">
+            <i class="fa fa-check-circle text-success"></i>
+            <i class="fa fa-ellipsis-v ms-2"></i>
+          </span>
+        </li>
+      </ul>
+    </li>
+    <li class="list-group-item">
+      <div>
+        <i class="fa fa-ellipsis-v"></i> Week 4
+        <span class="float-end">
+          <i class="fa fa-check-circle text-success"></i>
+          <i class="fa fa-plus ms-2"></i>
+          <i class="fa fa-ellipsis-v ms-2"></i>
+        </span>
+      </div>
+      <ul class="list-group">
+        <li class="list-group-item">
+          <i class="fa fa-ellipsis-v"></i> CSS Bootstrap Library
+          <span class="float-end">
+            <i class="fa fa-check-circle text-success"></i>
+            <i class="fa fa-ellipsis-v ms-2"></i>
+          </span>
+        </li>
+        <li class="list-group-item">
+          <i class="fa fa-ellipsis-v"></i> Float and Grid System
+          <span class="float-end">
+            <i class="fa fa-check-circle text-success"></i>
+            <i class="fa fa-ellipsis-v ms-2"></i>
+          </span>
+        </li>
+        <li class="list-group-item">
+          <i class="fa fa-ellipsis-v"></i> Laying out a Page with Flexbox
+          <span class="float-end">
+            <i class="fa fa-check-circle text-success"></i>
+            <i class="fa fa-ellipsis-v ms-2"></i>
+          </span>
+        </li>
+        <li class="list-group-item">
+          <i class="fa fa-ellipsis-v"></i> Final Project Requirements
+          <span class="float-end">
+            <i class="fa fa-check-circle text-success"></i>
+            <i class="fa fa-ellipsis-v ms-2"></i>
+          </span>
+        </li>
+      </ul>
+    </li>
+  </ul>
+</body>
 </html>
