--- a/public/Kanbas/Courses/Modules/screen.html
+++ b/public/Kanbas/Courses/Modules/screen.html
@@ -27,8 +27,8 @@
     </div>
     <div class="d-none d-md-block">
       <ul class="wd-navigation">
-        <li class="wd-active"><a href="/Kanbas/Courses/Home/screen.html">Home</a></li>
-        <li><a href="/Kanbas/Courses/Modules/screen.html">Modules</a></li>
+        <li><a href="/Kanbas/Courses/Home/screen.html">Home</a></li>
+        <li class="wd-active"><a href="/Kanbas/Courses/Modules/screen.html">Modules</a></li>
         <li><a href="http://piazza.com">Piazza</a></li>
         <li><a href="#">Zoom</a></li>
         <li><a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a></li>
