--- a/public/Kanbas/Courses/Navigation/index.html
+++ b/public/Kanbas/Courses/Navigation/index.html
@@ -1,25 +1,18 @@
 <html>
-    <head></head>
-    <body>
-        <ul>
-            <li><a href="/Kanbas/Courses/Home/screen.html">Home</a></li>
-            <li><a href="/Kanbas/Courses/Modules/index.html">Modules</a></li>
-            <li><a href="/Kanbas/Courses/Home/screen.html">Piazza</a></li>
-            <li><a href="/Kanbas/Courses/Zoom/index.html">Zoom Meetings</a></li>
-            <li><a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a></li>
-            <li><a href="/Kanbas/Courses/Quizzes/index.html">Quizzes</a></li>
-            <li><a href="/Kanbas/Courses/Grades/screen.html">Grades</a></li>
-            <li><a href="/Kanbas/Courses/People/index.html">People</a></li>
-            <li><a href="/Kanbas/Courses/Panopto/index.html">Panopto Video</a></li>
-            <li><a href="/Kanbas/Courses/Discussions/index.html">Discussions</a></li>
-            <li><a href="/Kanbas/Courses/Announcements/index.html">Announcements</a></li>
-            <li><a href="/Kanbas/Courses/Pages/index.html">Pages</a></li>
-            <li><a href="/Kanbas/Courses/Files/index.html">Files</a></li>
-            <li><a href="/Kanbas/Courses/Rubrics/index.html">Rubrics</a></li>
-            <li><a href="/Kanbas/Courses/Outcomes/index.html">Outcomes</a></li>
-            <li><a href="/Kanbas/Courses/Collaborations/index.html">Collaborations</a></li>
-            <li><a href="/Kanbas/Courses/Syllabus/index.html">Syllabus</a></li>
-            <li><a href="/Kanbas/Courses/Settings/Details/screen.html">Settings</a></li>
-        </ul>
-    </body>
+  <head>
+    <link rel="stylesheet" href="/Kanbas/styles.css" />
+    <link rel="stylesheet" href="/Kanbas/Courses/Navigation/index.css" />
+  </head>
+  <body>
+    <ul class="wd-navigation">
+      <li class="wd-active"><a href="/Kanbas/Courses/Home/screen.html">Home</a></li>
+      <li><a href="/Kanbas/Courses/Modules/screen.html">Modules</a></li>
+      <li><a href="http://piazza.com">Piazza</a></li>
+      <li><a href="#">Zoom</a></li>
+      <li><a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a></li>
+      <li><a href="#">Quizzes</a></li>
+      <li><a href="/Kanbas/Courses/Grades/screen.html">Grades</a></li>
+      <li><a href="#">People</a></li>
+    </ul>
+  </body>
 </html>
