--- a/public/Kanbas/Navigation/index.html
+++ b/public/Kanbas/Navigation/index.html
@@ -1,16 +1,21 @@
 <html>
-    <head></head>
-    <body>
-        <ul>
-            <li><a href="/Kanbas/Account/screen.html">Account</a></li>
-            <li><a href="/Kanbas/Dashboard/index.html">Dashboard</a></li>
-            <li><a href="/Kanbas/Courses/Home/screen.html">Courses</a></li>
-            <li><a href="/Kanbas/Calendar/index.html">Calendar</a></li>
-            <li><a href="/Kanbas/Inbox/index.html">Inbox</a></li>
-            <li><a href="/Kanbas/History/index.html">History</a></li>
-            <li><a href="/Kanbas/Studio/index.html">Studio</a></li>
-            <li><a href="/Kanbas/Commons/index.html">Commons</a></li>
-            <li><a href="/Kanbas/Help/index.html">Help</a></li>
-        </ul>
-    </body>
+  <head>
+    <link rel="stylesheet" href="/Kanbas/styles.css" />
+    <link rel="stylesheet" href="/Kanbas/Navigation/index.css" />
+    <link rel="stylesheet" href="/libs/font-awesome/css/font-awesome.min.css" />
+  </head>
+  <body>
+    <ul class="wd-kanbas-navigation d-none d-md-block">
+      <li><a href="http://northeastern.edu">N</a></li>
+      <li><a href="/Kanbas/Account/screen.html"><i class="fa fa-user account-icon"></i>Account</a></li>
+      <li><a href="/Kanbas/Dashboard/screen.html"><i class="fa fa-tachometer"></i>Dashboard</a></li>
+      <li class="wd-active"><a href="/Kanbas/Courses/Home/screen.html"><i class="fa fa-book"></i>Courses</a></li>
+      <li><a href="#"><i class="fa fa-users"></i>Groups</a></li>
+      <li><a href="#"><i class="fa fa-calendar"></i>Calendar</a></li>
+      <li><a href="#"><i class="fa fa-envelope"></i><br/>Inbox</a></li>
+      <li><a href="#"><i class="fa fa-history"></i>History</a></li>
+      <li><a href="#"><i class="fa fa-tv"></i>Studio</a></li>
+      <li><a href="#"><i class="fa fa-question"></i><br/>Help</a></li>
+    </ul>
+  </body>
 </html>
